--- a/crud/views/signup.ejs
+++ b/crud/views/signup.ejs
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
+    <script src="assets/js/main.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -17,15 +17,15 @@
 
     <div class="container">
         <h2>Stacked form</h2>
-        <form method="POST" action="">
+        <form method="POST" action="/signup">
             
             <div class="form-group">
-                <label for="name">Email:</label>
+                <label for="name">Name:</label>
                 <input type="text" class="form-control" id="name" placeholder="Enter Name" name="name">
             </div>
 
             <div class="form-group">
-                <label for="country">Email:</label>
+                <label for="country">Country:</label>
                 <select id="country" name="country" class="form-control">
                     <option value="india">India</option>
                     <option value="uk">UK</option>
@@ -41,24 +41,24 @@
             </div>
 
             <div class="form-check">
-                <input class="form-check-input" type="checkbox" name="hobby" value="" id="hobby1">
+                <input class="form-check-input" type="checkbox" name="hobby" value="1" id="hobby1">
                 <label class="form-check-label" for="hobby1">
                    Dance
                 </label>
                 <br/>
-                <input class="form-check-input" type="checkbox" name="hobby" value="" id="hobby2">
+                <input class="form-check-input" type="checkbox" name="hobby" value="2" id="hobby2">
                 <label class="form-check-label" for="hobby2">
                    Singing
                 </label>
             </div>
 
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="gender" value="" id="gender1">
+                <input class="form-check-input" type="radio" name="gender" value="male" id="gender1">
                 <label class="form-check-label" for="gender1">
                     Male
                 </label>
                 <br/>
-                <input class="form-check-input" type="radio" name="gender" value="" id="gender2">
+                <input class="form-check-input" type="radio" name="gender" value="female" id="gender2">
                 <label class="form-check-label" for="gender2">
                     Female
                 </label>
@@ -80,19 +80,21 @@
             </div>
 
             <div class="form-group">
-                <label for="exampleFormControlTextarea1">Example textarea</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <label for="exampleFormControlTextarea1">Address</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" name="address" rows="3"></textarea>
             </div>
 
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" type="checkbox" name="remember"> Remember me
+                    <input class="form-check-input" type="checkbox" name="remember" value="1"> Remember me
                 </label>
             </div>
 
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary" value="1" name="submit">Submit</button>
         </form>
     </div>
+
+    
 
 </body>
 </html>
